--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,4 +32,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/moviepy-fastapip:latest
+          tags: ghcr.io/${{ github.repository_owner }}/moviepy-fastapi:latest
