--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -27,7 +27,23 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push image
+      - name: Build image (no push yet)
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: false
+          tags: moviepy-fastapi:test
+
+      - name: Test container startup
+        run: |
+          docker run -d -p 8000:8000 --name moviepy-test moviepy-fastapi:test
+          echo "Waiting for server to start..."
+          sleep 5
+          echo "Testing if /docs is reachable..."
+          curl --fail http://localhost:8000/docs || (docker logs moviepy-test && exit 1)
+          docker stop moviepy-test
+
+      - name: Push image to GitHub Container Registry
         uses: docker/build-push-action@v5
         with:
           context: .
