--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -33,6 +33,7 @@ jobs:
         with:
           context: .
           push: false
+          load: true
           tags: moviepy-fastapi:test
 
       - name: Test container startup
